// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> renders .big correctly 1`] = `
<div>
  <button
    id="popover-id"
  >
    click me
  </button>
  <div>
    <span
      className="talixo-popover big talixo-popover--left"
      style={
        Object {
          "left": "50px",
          "top": "75px",
        }
      }
    >
      <span>
        Popover
      </span>
    </span>
  </div>
</div>
`;

exports[`<Popover /> renders .fade correctly 1`] = `
<div>
  <button
    id="popover-id"
  >
    click me
  </button>
  <div>
    <span
      className="talixo-popover talixo-popover--left"
      style={
        Object {
          "left": "50px",
          "top": "75px",
          "transition": "opacity 600ms",
        }
      }
    >
      <span>
        Popover
      </span>
    </span>
  </div>
</div>
`;

exports[`<Popover /> renders children correctly 1`] = `
<div>
  <button
    id="popover-id"
  >
    click me
  </button>
  <div>
    <span
      className="talixo-popover talixo-popover--left"
      style={
        Object {
          "left": "50px",
          "top": "75px",
        }
      }
    >
      <span>
        Popover
      </span>
    </span>
  </div>
</div>
`;

exports[`<Popover /> renders fadeTime correctly 1`] = `
<div>
  <button
    id="popover-id"
  >
    click me
  </button>
  <div>
    <span
      className="talixo-popover talixo-popover--left"
      style={
        Object {
          "left": "50px",
          "top": "75px",
          "transition": "opacity 1200ms",
        }
      }
    >
      <span>
        Popover
      </span>
    </span>
  </div>
</div>
`;
